fix: Projects view alignment in laptop view

--- a/css/mech.css
+++ b/css/mech.css
@@ -784,16 +784,23 @@ h2 {
     left:180px;
     top:-110px;
   }*/
-  #heading section p {
-    font-size: 1.5rem;
+  #heading section img{
+    margin-top: 5rem;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 3rem;
   }
+  #heading section p {
+    font-size: 1.2rem;
+    width: 80%;
+}
   .nav-projects ul li p {
     display: block;
     position: absolute;
     font-size: 0.9rem;
-    left: 100px;
+    left: 70px;
     width: max-content;
-    top: 55px;
+    top: 50px;
   }
   .nav-projects ul li {
     position: relative;
@@ -801,7 +808,7 @@ h2 {
     vertical-align: middle;
     height: 6vh;
     width: 14%;
-    padding: 8vh 3rem;
+    padding: 6vh 0rem;
   }
   #testimony .container .carousel .slider section p {
     font-size: 1rem;
